--- a/index.html
+++ b/index.html
@@ -5,45 +5,45 @@
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
 <body>
-  <header class="aaa">
-    <img src="./eisenhower-matrix.jpg" alt="eisenhower-matrix">
-    <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+  <header class="header">
+    <img class="header__img" src="./eisenhower-matrix.jpg" alt="eisenhower-matrix">
+    <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
-  <main class="centered-main-page-element">
-    <div id="topSectionForAddingElementToList">
-      <label for="new-task">Add Item</label>
-      <div class="task-row-wrapper">
-        <input id="new-task" class="task" type="text">
-        <button>Add</button>
+  <main class="main">
+    <div class="add-task">
+      <label class="title label add-task__title" for="new-task">Add Item</label>
+      <div class="add-task__row-wrapper">
+        <input class="input input__text task add-task__input" id="new-task" type="text">
+        <button class="button">Add</button>
       </div>
     </div>
-    <h3>Todo</h3>
-    <ul id="incompleteTasks">
-      <li>
-        <input type="checkbox"><label class="task">Pay Bills</label>
-        <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete">
-          <img src="./remove.svg" alt="remove">
+    <h3 class="title">Todo</h3>
+    <ul class="incomplete list" id="incomplete-tasks">
+      <li class="list-item">
+        <input class="input checkbox" type="checkbox"><label class="label task">Pay Bills</label>
+        <input class="input input__text task" type="text">
+        <button class="button button-edit">Edit</button>
+        <button class="button button-delete">
+          <img class="button-delete__img" src="./remove.svg" alt="remove">
         </button>
       </li>
-      <li class="editMode">
-        <input type="checkbox"><label class="task">Go Shopping</label>
-        <input type="text" value="Go Shopping" class="task">
-        <button class="edit">Save</button>
-        <button class="delete">
-          <img src="./remove.svg" alt="remove">
+      <li class="list-item edit-mode">
+        <input class="checkbox" type="checkbox"><label class="label task">Go Shopping</label>
+        <input class="input input__text task" type="text" value="Go Shopping">
+        <button class="button button-edit">Save</button>
+        <button class="button button-delete">
+          <img class="button-delete__img" src="./remove.svg" alt="remove">
         </button>
       </li>
     </ul>
-    <h3>Completed</h3>
-    <ul id="completed-tasks">
-      <li>
-        <input type="checkbox" checked><label class="task">See the Doctor</label>
-        <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete">
-          <img src="./remove.svg" alt="remove">
+    <h3 class="title">Completed</h3>
+    <ul class="completed list" id="completed-tasks">
+      <li class="list-item">
+        <input class="checkbox" type="checkbox" checked><label class="label task">See the Doctor</label>
+        <input class="input input__text task" type="text">
+        <button class="button button-edit">Edit</button>
+        <button class="button button-delete">
+          <img class="button-delete__img" src="./remove.svg" alt="remove">
         </button>
       </li>
     </ul>
